--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -68,7 +68,7 @@
 
                 <div class="menuLateral" id="menuLateral">
                     <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
-                    <p> Olá, usuário </p>
+                    <p id="nome-usuario"> Olá, <a href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário</p>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais
                             </a>
