--- a/CadastroItens/Alimentos.html
+++ b/CadastroItens/Alimentos.html
@@ -98,28 +98,28 @@
             <form id="cadastroForm" novalidate>
             <div>
               <label> PRODUTO </label>
-              <input type="text" id="nome" name="nome" required>
+              <input type="text" id="nome" name="nome" class="form-control" required>
               <div class="valid-feedback"></div>
               <div class="invalid-feedback">Preencha o campo.</div>
             </div>
 
             <div>
               <label> DATA DE COMPRA </label>
-              <input type="date" id="data" name="data" required>
+              <input type="date" id="data" name="data" class="form-control" required>
               <div class="valid-feedback"></div>
               <div class="invalid-feedback">Preencha o campo.</div>
             </div>
 
             <div>
               <label> VALOR UNITÁRIO </label>
-              <input type="number" id="valor" name="valor" required>
+              <input type="number" id="valor" name="valor" class="form-control" required>
               <div class="valid-feedback"></div>
               <div class="invalid-feedback">Preencha o campo.</div>
             </div>
 
             <div>
               <label> QUANTIDADE </label>
-              <input type="number" id="qtde" name="qtde" required>
+              <input type="number" id="qtde" name="qtde" class="form-control" required>
               <div class="valid-feedback"></div>
               <div class="invalid-feedback">Preencha o campo.</div>
             </div>
