--- a/PaginaPrincipal/PaginaPrincipal.html
+++ b/PaginaPrincipal/PaginaPrincipal.html
@@ -151,7 +151,7 @@
         <div class="col-9">
             <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 g-4" id="container-card">
 
-                <a href="">
+                <a href="../CadastroItens/CuidadosPessoais.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -170,7 +170,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/Educacao.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -192,7 +192,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/Financiamento.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -215,7 +215,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/Imposto.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -238,7 +238,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/Lazer.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -257,7 +257,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/NotaFiscal.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -277,7 +277,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/Moradia.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -295,7 +295,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/PoupançaInvestimento.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -315,7 +315,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/Saude.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -337,7 +337,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/Transporte.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
@@ -357,7 +357,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/Vestuario.html">
                     <div class="col">
                         <div class="card   ">
                             <div class="card-body">
@@ -376,7 +376,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="../CadastroItens/Outros.html">
                     <div class="col">
                         <div class="card">
                             <div class="card-body">
