Cadastro dos itens funcionando

--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -22,8 +22,7 @@
                 <div class="d-flex align-items-center">
                     <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px" class="mr-3">
 
-                    <p id="nome-usuario" class="text-center m-0">Olá, <a href="../PerfilUsuario/PerfilUsuario.html"
-                            id="link-usuario">usuário</a></p>
+                    <p> Olá, <a href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário </a></p>
                 </div>
 
 
