Cadastro de TODOS os itens funcionando

--- a/CadastroItens/Alimentos.html
+++ b/CadastroItens/Alimentos.html
@@ -131,11 +131,12 @@
             </div>
 
             <div class="botoesCadastro">
-              <button class="cancelar" onclick="Cancelar()">CANCELAR</button>
+              <button class="cancelar" onclick="limparCampos()">CANCELAR</button>
               <button type="submit" class="cadastrar" id="botao">CADASTRAR</button>
             </div>
+          </form>
           </div>
-        </form>
+        
       </div>
     </div>
   </main>
