--- a/CadastroItens/CuidadosPessoais.html
+++ b/CadastroItens/CuidadosPessoais.html
@@ -125,7 +125,7 @@
             </div>
 
             <div class="botoesCadastro">
-              <button class="cancelar" onclick="Cancelar()">CANCELAR</button>
+              <button class="cancelar" onclick="limparCampos()">CANCELAR</button>
               <button type="submit" class="cadastrar">CADASTRAR</button>
             </div>
 
