--- a/CadastroItens/Higiene.html
+++ b/CadastroItens/Higiene.html
@@ -96,25 +96,45 @@
           <p class="cadastroItens"> CADASTRO DE ITEM</p>
           <h2>HIGIENE</h2>
 
-          <label> PRODUTO </label>
-          <input type="text" id="nome" name="nome" required>
+          <form id="cadastroForm" novalidate>
+            <div>
+              <label> PRODUTO </label>
+              <input type="text" id="nome" name="nome" class="form-control" required>
+              <div class="valid-feedback"></div>
+              <div class="invalid-feedback">Preencha o campo.</div>
+            </div>
 
-          <label> DATA DE COMPRA </label>
-          <input type="date" id="data" name="data" required>
+            <div>
+              <label> DATA DE COMPRA </label>
+              <input type="date" id="data" name="data" class="form-control" required>
+              <div class="valid-feedback"></div>
+              <div class="invalid-feedback">Preencha o campo.</div>
+            </div>
 
-          <label> VALOR UNITÁRIO </label>
-          <input type="number" id="valor" name="valor" required>
+            <div>
+              <label> VALOR UNITÁRIO </label>
+              <input type="number" id="valor" name="valor" class="form-control" required>
+              <div class="valid-feedback"></div>
+              <div class="invalid-feedback">Preencha o campo.</div>
+            </div>
 
-          <label> QUANTIDADE </label>
-          <input type="number" id="qtde" name="qtde" required>
+            <div>
+              <label> QUANTIDADE </label>
+              <input type="number" id="qtde" name="qtde" class="form-control" required>
+              <div class="valid-feedback"></div>
+              <div class="invalid-feedback">Preencha o campo.</div>
+            </div>
 
-          <label> DESCRIÇÃO DO PRODUTO </label>
-          <input type="text" id="descricao" name="descricao" required>
+            <div>
+              <label> DESCRIÇÃO DO PRODUTO </label>
+              <input type="text" id="descricao" name="descricao" required>
+            </div>
 
-          <div class="botoesCadastro">
-            <button class="cancelar" onclick="Cancelar()">CANCELAR</button>
-            <button class="cadastrar" onclick="Cadastrar()">CADASTRAR</button>
-          </div>
+            <div class="botoesCadastro">
+              <button class="cancelar" onclick="limparCampos()">CANCELAR</button>
+              <button type="submit" class="cadastrar" id="botao">CADASTRAR</button>
+            </div>
+          </form>
         </div>
 
       </div>
