--- a/CadastroItens/Alimentos.html
+++ b/CadastroItens/Alimentos.html
@@ -1,156 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro de item - Alimentos</title>
   <link rel="shortcut icon" href="../Logos/2-cortada.png" type="image/x-icon" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="CadastroItens.css">
   <script src="Alimentos.js"></script>
-
-  
-
-
 </head>
 
 <body>
-
-
+  
+  <!-- CRIANDO O MENU PARA CELULAR -->
   <div class="MenuSUPERIOR" id="menuSUPERIOR">
     <div class="container ">
-      <div class="d-flex ">
-        <div class="d-flex align-items-center">
-          <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px" class="mr-3">
-
-          <p id="nome-usuario" class="text-center m-0">Olá, <a href="../PerfilUsuario/PerfilUsuario.html"
-              id="link-usuario"> usuário</a></p>
-        </div>
-
-
-        <div class="dropdown ms-auto mt-3 " style="border-bottom: 0px;">
-          <button class="btn btn-secondary " type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Cadastrar Item
-          </button>
-          <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
-
-            <li class="mt-2">
-              <a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais</a>
-            </li>
-            <li class="mt-2">
-              <a href="../CadastroItens/Educacao.html"> Educação </a>
-            </li>
-            </li class="mt-2">
-            <li class="mt-2">
-              <a href="../CadastroItens/Financiamento.html"> Financiamento</a>
-            </li>
-            <li class="mt-2"> <a href="../CadastroItens/Imposto.html"> Imposto </a></li>
-            <li class="mt-2"> <a href="../CadastroItens/Lazer.html"> Lazer </a></li>
-
-            <li class="dropdown" onclick="stopPropagation(event)">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Mercado
-              </button>
-              <ul class="dropdown-menu text-center" aria-labelledby=" dropdownMenuButton2">
-                <li class="mt-2"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
-                </li>
-                <li class="mt-2"><a href="../CadastroItens/Bebidas.html"> Bebidas </a>
-                </li>
-                <li class="mt-2"><a href="../CadastroItens/Higiene.html"> Higiene </a>
-                </li>
-                <li class="mt-2"><a href="../CadastroItens/Limpeza.html"> Limpeza </a>
-                </li>
-                <li class="mt-2"><a href="../CadastroItens/NotaFiscal.html"> Nota Fiscal
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li class="mt-2">
-              <a href="../CadastroItens/Moradia.html"> Moradia </a>
-
-            </li>
-            <li class="mt-2">
-              <a href="../CadastroItens/PoupançaInvestimento.html"> Poupança e
-                Investimento
-              </a>
-            </li>
-            <li class="mt-2">
-              <a href="../CadastroItens/Saude.html"> Saúde </a>
-            </li>
-            <li class="mt-2">
-              <a href="../CadastroItens/Transporte.html"> Transporte </a>
-            </li>
-            <li class="mt-2">
-              <a href="../CadastroItens/Moradia.html"> Moradia </a>
-            </li>
-            <li class="mt-2">
-              <a href="../CadastroItens/Vestuario.html"> Vestuário </a>
-            </li>
-            <li class="mt-2">
-              <a href="../CadastroItens/Outros.html"> Outros</a>
-            </li>
-          </ul>
-        </div>
-
-
-
-      </div>
-    </div>
-  </div>
-
-
-  <div class="row" >
-    <div class="col-3" id="porColunas">
-      <div class="MenuLATERAL " id="menuLateral">
-        <div class="container">
-          <img class="mx-auto d-block" src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
-          <p class="text-center"> Olá, <a class="tex" href="../PerfilUsuario/PerfilUsuario.html"
-              id="link-usuario2">usuário</p>
-          <div class="row">
-            <div class="col">
-              <div class="mt-3"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados
-                  Pessoais</a>
-              </div>
-              <div class="mt-3 "><a href="../CadastroItens/Educacao.html"> Educação </a></div>
-              <div class="mt-3 "><a href="../CadastroItens/Financiamento.html"> Financiamento</a>
-              </div>
-              <div class="mt-3 "><a href="../CadastroItens/Imposto.html"> Imposto </a></div>
-              <div class="mt-3 "><a href="../CadastroItens/Lazer.html"> Lazer </a></div>
-              <div class="mt-3 dropdown" data-bs-toggle="dropdown">Mercado</div>
-              <ul class="dropdown-menu text-center">
-                <li class="dropdown-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
-                </li>
-                <li class="dropdown-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a>
-                </li>
-                <li class="dropdown-item"><a href="../CadastroItens/Higiene.html"> Higiene </a>
-                </li>
-                <li class="dropdown-item"><a href="../CadastroItens/Limpeza.html"> Limpeza </a>
-                </li>
-                <li class="dropdown-item"><a href="../CadastroItens/NotaFiscal.html"> Nota Fiscal
-                  </a>
-                </li>
-              </ul>
-              <div class="mt-3"><a href="../CadastroItens/Moradia.html"> Moradia </a>
-              </div>
-              <div class="mt-3"><a href="../CadastroItens/PoupançaInvestimento.html"> Poupança e
-                  Investimento
-                </a></div>
-              <div class="mt-3"><a href="../CadastroItens/Saude.html"> Saúde </a></div>
-              <div class=" mt-3"><a href="../CadastroItens/Transporte.html"> Transporte </a></div>
-              <div class=" mt-3"><a href="../CadastroItens/Moradia.html"> Moradia </a></div>
-              <div class=" mt-3"><a href="../CadastroItens/Vestuario.html"> Vestuário </a></div>
-              <div class=" mt-3" style="border-bottom: none;"><a href="../CadastroItens/Outros.html">
-                  Outros </a></div>
+        <div class="d-flex ">
+            <div class="d-flex align-items-center">
+                <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px" class="mr-3">
+                <p id="nome-usuario" class="text-center m-0">Olá, <a href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário</a></p>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
+            <div class="dropdown ms-auto mt-3 " style="border-bottom: 0px;">
+                <button class="btn btn-secondary " type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">  
+                    Cadastrar Item
+                </button>
+                <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
+                    <li class="mt-2"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais </a></li>
+                    <li class="mt-2"><a href="../CadastroItens/Educacao.html"> Educação </a></li>
+                    <li class="mt-2"><a href="../CadastroItens/Financiamento.html"> Financiamento</a></li>
+                    <li class="mt-2"> <a href="../CadastroItens/Imposto.html"> Imposto </a></li>
+                    <li class="mt-2"> <a href="../CadastroItens/Lazer.html"> Lazer </a></li>
 
+                    <li class="dropdown" onclick="stopPropagation(event)">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"  data-bs-toggle="dropdown" 
+                        aria-expanded="false"> Mercado </button>
+                        <ul class="dropdown-menu text-center aria-labelledby=" dropdownMenuButton2>
+                            <li class="mt-2"><a href="../CadastroItens/Alimentos.html"> Alimentos </a></li>
+                            <li class="mt-2"><a href="../CadastroItens/Bebidas.html"> Bebidas </a></li>
+                            <li class="mt-2"><a href="../CadastroItens/Higiene.html"> Higiene </a></li>
+                            <li class="mt-2"><a href="../CadastroItens/Limpeza.html"> Limpeza </a></li>
+                            <li class="mt-2"><a href="../CadastroItens/NotaFiscal.html"> Nota Fiscal </a></li>
+                        </ul>
+                    </li>
+                    <li class="mt-2"><a href="../CadastroItens/Moradia.html"> Moradia </a> </li>
+                    <li class="mt-2"><a href="../CadastroItens/PoupançaInvestimento.html"> Poupança e Investimento</a></li>
+                    <li class="mt-2"><a href="../CadastroItens/Saude.html"> Saúde </a></li>
+                    <li class="mt-2"><a href="../CadastroItens/Transporte.html"> Transporte </a></li>
+                    <li class="mt-2"><a href="../CadastroItens/Moradia.html"> Moradia </a></li>
+                    <li class="mt-2"><a href="../CadastroItens/Vestuario.html"> Vestuário </a></li>
+                    <li class="mt-2"><a href="../CadastroItens/Outros.html"> Outros </a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- CRIANDO O MENU LATERAL -->
+<div class="row" id="porColunas">
+    <div class="col-3">
+        <div class="MenuLATERAL " id="menuLateral">
+            <div class="container">
+                <img class="mx-auto d-block" src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
+                <p class="text-center" id="nome-usuario"> Olá, <a class="tex" href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário</p>
+                <div class="row">
+                    <div class="col">
+                        <div class="mt-3"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais</a></div>
+                        <div class="mt-3 "><a href="../CadastroItens/Educacao.html"> Educação </a></div>
+                        <div class="mt-3 "><a href="../CadastroItens/Financiamento.html"> Financiamento</a></div>
+                        <div class="mt-3 "><a href="../CadastroItens/Imposto.html"> Imposto </a></div>
+                        <div class="mt-3 "><a href="../CadastroItens/Lazer.html"> Lazer </a></div>
+
+                        <div class="mt-3 dropdown" data-bs-toggle="dropdown"> Mercado </div>
+                        <ul class="dropdown-menu text-center">
+                            <li class="dropdown-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a></li>
+                            <li class="dropdown-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a></li>
+                            <li class="dropdown-item"><a href="../CadastroItens/Higiene.html"> Higiene </a></li>
+                            <li class="dropdown-item"><a href="../CadastroItens/Limpeza.html"> Limpeza </a></li>
+                            <li class="dropdown-item"><a href="../CadastroItens/NotaFiscal.html"> Nota Fiscal </a></li>
+                        </ul>
+                        <div class="mt-3"><a href="../CadastroItens/Moradia.html"> Moradia </a></div>
+                        <div class="mt-3"><a href="../CadastroItens/PoupançaInvestimento.html"> Poupança e Investimento </a></div>
+                        <div class="mt-3"><a href="../CadastroItens/Saude.html"> Saúde </a></div>
+                        <div class=" mt-3"><a href="../CadastroItens/Transporte.html"> Transporte </a></div>
+                        <div class=" mt-3"><a href="../CadastroItens/Moradia.html"> Moradia </a></div>
+                        <div class=" mt-3"><a href="../CadastroItens/Vestuario.html"> Vestuário </a></div>
+                        <div class=" mt-3" style="border-bottom: none;"><a href="../CadastroItens/Outros.html"> Outros </a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="col-9">
       <div class="container">
@@ -192,39 +131,29 @@
                   <button class="cancelar" onclick="Cancelar()">CANCELAR</button>
                   <button type="submit" class="cadastrar" id="botao" onclick="validarcampos">CADASTRAR</button>
                 </div>
+              </form>
             </div>
-            </form>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-
-
-
-
   <footer id='rodape' class="text-center text-lg-start">
     <div class="container p-1">
       <div id='rodape-conteudo' class="row align-items-center">
         <div class="col-lg-4 mb-md-0 justify-content-center align-items-center">
-          <a href="../PaginaPrincipal/PaginaPrincipal.html"><img src="../Imagens/1.png" alt="logo Cash Control"
-              style="height: 100px;"></a>
+          <a href="../PaginaPrincipal/PaginaPrincipal.html"><img src="../Imagens/1.png" alt="logo Cash Control" style="height: 100px;"></a>
         </div>
         <div class="col-lg-8 col-md-12 mb-md-0 text-center">
-          <h5 id='frase-impacto' class="text-uppercase mb-1 mt-3">CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ
-            MERECE!</h5>
+          <h5 id='frase-impacto' class="text-uppercase mb-1 mt-3">CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE!</h5>
           <button id='botao-atendimento' type="button" class="btn mt-3 mb-3">
-            <a href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank"> CENTRAL DE ATENDIMENTO
-            </a></button>
+            <a href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank"> CENTRAL DE ATENDIMENTO </a></button>
         </div>
       </div>
     </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-
 </html>
