--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,70 +13,66 @@
 </head>
 
 <body>
+
   <header>
-    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control"
-        height="70px"></a>
+    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control" height="70px"></a>
   </header>
 
-  
   <div class="container1">
     <div class="cadastro">
-      <h2>FAZER CADASTRO</h2>
+      <h2> FAZER CADASTRO </h2>
 
       <form id="cadastroForm" novalidate>
         <div>
-          <label for="nome">NOME COMPLETO</label>
+          <label for="nome"> NOME COMPLETO </label>
           <input type="text" id="nome" class="form-control" name="nome" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback"> Preencha o campo </div>
         </div>
 
         <div>
-          <label for="email">E-MAIL</label>
+          <label for="email"> E-MAIL </label>
           <input type="email" id="email" class="form-control" name="email" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback"> Preencha o campo </div>
         </div>
 
         <div>
-          <label for="celular">TELEFONE</label>
-          <input type="tel" id="celular" class="form-control" name="celular" maxlength="14"
-            oninput="formatarTelefone(this)" placeholder="(__) _____-____" required>
+          <label for="celular"> TELEFONE </label>
+          <input type="tel" id="celular" class="form-control" name="celular" maxlength="14" oninput="formatarTelefone(this)" placeholder="(__) _____-____" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback"> Preencha o campo </div>
         </div>
 
         <div>
-          <label for="cpf">CPF</label>
-          <input type="tel" id="cpf" class="form-control" name="cpf" maxlength="14" oninput="formatarCpf(this)"
-            required>
+          <label for="cpf"> CPF </label>
+          <input type="tel" id="cpf" class="form-control" name="cpf" maxlength="14" oninput="formatarCpf(this)" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback" id="cpf-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback" id="cpf-feedback"> Preencha o campo </div>
         </div>
 
         <div>
-          <label for="senha">SENHA</label>
+          <label for="senha"> SENHA </label>
           <input type="password" id="senha" class="form-control" name="senha" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback" id="senha-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback" id="senha-feedback"> Preencha o campo </div>
         </div>
 
         <div>
-          <label for="confirmar-senha">CONFIRMAÇÃO DE SENHA</label>
+          <label for="confirmar-senha"> CONFIRMAÇÃO DE SENHA </label>
           <input type="password" id="confirmar-senha" class="form-control" name="confirmar-senha" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback" id="confirmar-senha-feedback">As senhas nao coincidem.</div>
+          <div class="invalid-feedback" id="confirmar-senha-feedback"> As senhas nao coincidem </div>
         </div>
 
-        <button type="submit" id="botao">CADASTRAR</button>
+        <button type="submit" id="botao"> CADASTRAR </button>
       </form>
     </div>
   </div>
 
   <footer id='rodape'>
-    <h5 id='frase-impacto'>CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE!
+    <h5 id='frase-impacto'> CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE! </h5>
   </footer>
 
 </body>
-
 </html>
