--- a/TelaLogin/TelaLogin.html
+++ b/TelaLogin/TelaLogin.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,43 +14,38 @@
 
 <body>
   <header>
-    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control"
-        height="70px"></a>
+    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control"height="70px"></a>
   </header>
+
   <div class="container-card-login">
     <div class="login">
-      <h2>FAZER LOGIN</h2>
-
+      <h2> FAZER LOGIN </h2>
       <form id="cadastroForm" novalidate>
         <div>
-          <label for="email">E-MAIL</label>
+          <label for="email"> E-MAIL </label>
           <input type="email" id="email" class="form-control" name="email" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback" id="email-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback" id="email-feedback"> Preencha o campo </div>
         </div>
 
         <div>
-          <label for="senha">SENHA</label>
+          <label for="senha"> SENHA </label>
           <input type="password" id="senha" class="form-control" name="senha" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback" id="senha-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback" id="senha-feedback"> Preencha o campo </div>
         </div>
 
-        <button type="button" id="botao" onclick="validarLogin()">ENTRAR</button>
+        <button type="button" id="botao" onclick="validarLogin()"> ENTRAR </button>
 
-        <p>AINDA NÃO POSSUI CADASTRO?</p>
-        <a href="../TelaCadastro/TelaCadastro.html" style="text-decoration: none;">
-          <p id="cadastre-se">CADASTRE-SE</p>
-        </a>
+        <p> AINDA NÃO POSSUI CADASTRO? </p>
+        <a href="../TelaCadastro/TelaCadastro.html" style="text-decoration: none;"><p id="cadastre-se"> CADASTRE-SE </p></a>
       </form>
     </div>
   </div>
 
   <footer id='rodape'>
-    <h5 id='frase-impacto'>CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE!
+    <h5 id='frase-impacto'>CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE! </h5>
   </footer>
 
-  
 </body>
-
 </html>
