itens cadastrados ok + tentando ajustar tela alimentos

--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -91,6 +91,7 @@
             </div>
         </div>
 
+        <!-- CARD -->
         <div class="col-9">
             <div class="container">
                 <div class="row">
