adicionado os id

--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -61,7 +61,7 @@
             <div class="MenuLATERAL " id="menuLateral">
                 <div class="container">
                     <img class="mx-auto d-block" src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
-                    <p class="text-center" id="nome-usuario"> Olá, <a class="tex" href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário</p>
+                    <p class="text-center" id="nome-usuario"> Olá, <a class="text" href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario2">usuário</p>
                     <div class="row">
                         <div class="col">
                             <div class="mt-3"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais</a></div>
