--- a/CadastroItens/alimentos2.html
+++ b/CadastroItens/alimentos2.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="Alimentos2.css">
     <script src="Alimentos.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 
@@ -25,7 +25,7 @@
                             alt="Logo da Cash Control" style="height: 70px" class="mr-3">
                     </a>
                     <p id="nome-usuario" class="text-center m-0">Olá, <a href="../PerfilUsuario/PerfilUsuario.html"
-                            id="link-usuario">usuário</a></p>
+                            id="link-usuario2">usuário</a></p>
                 </div>
 
 
@@ -194,9 +194,8 @@
                             <input type="text" id="descricao" name="descricao" required>
                         </div>
                         <div class="botoesCadastro">
-                            <button class="cancelar" onclick="Cancelar()">CANCELAR</button>
-                            <button type="submit" class="cadastrar" id="botao"
-                                onclick="validarcampos">CADASTRAR</button>
+                            <button class="cancelar" onclick="limparCampos()">CANCELAR</button>
+                            <button type="submit" class="cadastrar" id="botao">CADASTRAR</button>
                         </div>
                 </div>
                 </form>
@@ -205,10 +204,6 @@
 
 
     </div>
-
-
-
-
 
     <footer id='rodape' class="text-center text-lg-start">
         <div class="container p-1">
@@ -227,10 +222,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
